pkg/lang/testdata/ub/inputs/invalid/bad-list-constructor.ub
inputs: {
  bad: { type: list(weird-thing) }
}
